Overflow mobile problem solved

--- a/src/components/NavBar/style.css
+++ b/src/components/NavBar/style.css
@@ -1,6 +1,6 @@
 nav {
     position: fixed;
-    width: 100%;
+    width: 100vw;
     margin:0;
     padding: 0;
     background-color: rgba(255, 255, 255, 0.7);
