--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -11,7 +11,7 @@ p {
   font-size: 18px;
 }
 
-html {
+html,body {
   scroll-behavior: smooth;
   overflow-x: hidden;
 }
